--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f2d825ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c7b0e5a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f2d4989d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f2d498bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c7aa98050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c7aa98790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f2da492d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9f2da494d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c7b04e310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c7b04e510&gt;]</pre>
 </div>
 
 </div>
