--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb26b66ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52a1bec250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb264d5b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb264d5d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52a15b2a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52a15b2c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb26a82450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb26a82650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52a1b663d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52a1b665d0&gt;]</pre>
 </div>
 
 </div>
