--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52a1bec250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6012080f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52a15b2a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52a15b2c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6012646090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f60126468d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52a1b663d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52a1b665d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6012bfc290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6012bfc490&gt;]</pre>
 </div>
 
 </div>
