--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff21be21310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e80902990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff21ba58850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff21ba7db50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e805be890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e805bea90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff21c027210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff21c032510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e80b71250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e80b71450&gt;]</pre>
 </div>
 
 </div>
