--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e51bc79d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8941c16e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e51b89ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e51b89d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89421eca50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89421ecc50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e5213f350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e5213f590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89427a4390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89427a4590&gt;]</pre>
 </div>
 
 </div>
