--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40081f8950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff6ad591650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4007242990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4007242bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6ad202b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff6ad202d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f40077f6290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f40077f64d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6ad7a8490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff6ad7a8690&gt;]</pre>
 </div>
 
 </div>
