--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4da7ee0b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe04885e510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4da84b0c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4da84b0e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0484b0810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe0484b0a10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4da8a5e4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4da8a5e6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe048a66190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe048a66390&gt;]</pre>
 </div>
 
 </div>
