--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe04885e510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdaa84f810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0484b0810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe0484b0a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdaa213a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdaa213c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe048a66190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe048a66390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdaa7c5450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdaa7c5650&gt;]</pre>
 </div>
 
 </div>
