--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd27cb67750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fddda6288d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd27c7d7a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd27c7d7c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fddda284910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fddda284b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd27cd8a450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd27cd8a650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fddda839310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fddda839510&gt;]</pre>
 </div>
 
 </div>
