--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51d445d250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e28bfa490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51d3659890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51d3659ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e2886c910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7e2886ca90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51d3c11210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51d3c11450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e28e24290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7e28e24410&gt;]</pre>
 </div>
 
 </div>
