--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e28bfa490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9bddab2ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e2886c910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e2886ca90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bddab2050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9bdd7eeb50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e28e24290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e28e24410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bdddf35d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9bddda1410&gt;]</pre>
 </div>
 
 </div>
