--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc951b4df10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f38ea9aa690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc95120cf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9514e9c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38ea96d550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38ea5fcad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc951adc190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc951a90590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38eabb7250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38eabb7450&gt;]</pre>
 </div>
 
 </div>
