--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ecce7d110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e6f2dd190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ecc07ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ecc07cc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e6ef3e210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e6ef3e990&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ecc62d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ecc62d5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e6f4f22d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e6f4f24d0&gt;]</pre>
 </div>
 
 </div>
