--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f808cf3bad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c80572810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f808cc00b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f808cc00d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c8028db10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c8028dd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f808d1a9450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f808d1a9650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c8083f450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c8083f650&gt;]</pre>
 </div>
 
 </div>
