--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50bb533350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe35a128690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50bb1a7b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50bb1a7b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe359df2b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe359df2d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50bb756550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50bb756750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe35a3974d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe35a3976d0&gt;]</pre>
 </div>
 
 </div>
