--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2140961050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce8a2b05d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2141097a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2140da4a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce89f6e990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce89f6eb90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21413571d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21413abb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce8a51f310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce8a51f510&gt;]</pre>
 </div>
 
 </div>
