--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d9590e290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb86ca88990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d9557e990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2d9557eb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb86c7ae850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb86c7aea50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d95b33390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2d95b33590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb86cd5e1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb86cd5e3d0&gt;]</pre>
 </div>
 
 </div>
