--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8177d33e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f040c7c9ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f81776ef8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f81776efad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f040c4e5550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f040c50cb50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8177ca5250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8177ca5450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f040caabe50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f040cabe490&gt;]</pre>
 </div>
 
 </div>
