--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f86770b6b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57a9868350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8676a6e950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8676a6eb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57a94c6950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57a94c6b50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8677020250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8677020450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f57a9a81210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f57a9a81410&gt;]</pre>
 </div>
 
 </div>
