--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93bb6848d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f237044ef10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93bbc4fa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93bbc4fc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2370a25b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2370a25d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93bc24fdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93bc2034d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2370fcb490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2370fcb690&gt;]</pre>
 </div>
 
 </div>
